--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,7 +59,7 @@
     "no-param-reassign": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
+    "react-hooks/exhaustive-deps": "off",
     "react/no-danger": "off",
     "consistent-return": "off"
   },
