--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "express": "^4.18.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -15,9 +16,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "tsc-alias": "^1.7.0",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
-    "tsc-alias": "^1.7.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
@@ -37,10 +38,12 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "gh-pages": "^3.2.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build --output-dir docs -s public rimraf dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
